# meetingscribe

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: docker.yaml
meetingscribe/: audio.py  chat.py  main.py  misc.py  text.py
