[tool.poetry]
name = "meetingscribe"
version = "0.1.2"
description = "MeetingScribe is an AI-driven command-line tool designed to streamline your meeting experience by handling transcription, translation, and note-taking. Effortlessly generate accurate translation/transcription in English from audio file. Additionally, the tool intelligently creates meeting notes, summaries, and identifies action items."
authors = ["Mykhailo Marynenko <mykhailo@0x77.dev>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/0x77dev/meetingscribe"

[tool.poetry.scripts]
meetingscribe = "meetingscribe.main:app"
meeting = "meetingscribe.main:app"

[tool.poetry.dependencies]
python = "^3.9"
typer = { extras = ["all"], version = "^0.7.0" }
openai = { extras = ["all"], version = "^0.27.2" }
pydub = { extras = ["all"], version = "^0.25.1" }
srt = { extras = ["all"], version = "^3.5.2" }
pysrt = { extras = ["all"], version = "^1.1.2" }
aiohttp = { extras = ["all"], version = "^3.8.4" }
cchardet = { extras = ["all"], version = "^2.1.7" }
rich = "10.11.0"

[tool.poetry.dev-dependencies]
typer-cli = "^0.0.13"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
